sample/mysql.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        emptyDir: {}

---

kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
