sample/sample-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-redis
spec:
  selector:
    matchLabels:
      app: sample-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-redis
        version: 0.0.1
    spec:
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: sample-redis
  labels:
    app: sample-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: sample-redis
