sample/sample-web-lb.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: sample-web
  template:
    metadata:
      labels:
        k8s-app: sample-web
    spec:
      containers:
      - name: sample-web
        image: nalbam/sample-web:alpine
        ports:
        - containerPort: 80
          protocol: TCP

---
# ------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  selector:
    k8s-app: sample-web
