sample/argo-ingress.yml
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ui
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: argo-ui-devops.demo.spic.me
      http:
        paths:
          - backend:
              serviceName: argo-ui
              servicePort: 80
  tls:
    - hosts:
        - argo-ui-devops.demo.spic.me
      secretName: argo-ui--tls
