sample/argo-webhook-ingress.yaml
# ------------------- Ingress ------------------- #

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webhook-gateway
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: webhook.demo.mzdev.be
      http:
        paths:
          - backend:
              serviceName: webhook-gateway
              servicePort: 12000
  tls:
    - hosts:
        - webhook.demo.mzdev.be
      secretName: webhook-gateway-tls
