sample/argocd-ingress-spot.yaml
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: argocd-server-devops.spot.mzdev.be
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
  tls:
    - hosts:
        - argocd-server-devops.spot.mzdev.be
      secretName: argocd-server-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
    - host: argocd-grpc-devops.spot.mzdev.be
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
  tls:
    - hosts:
        - argocd-grpc-devops.spot.mzdev.be
      secretName: argocd-grpc-tls
