sample/argocd-ingress.yaml
# ------------------- Ingress ------------------- #

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: argocd-server-devops.demo.spic.me
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
  tls:
    - hosts:
        - argocd-server-devops.demo.spic.me
      secretName: argocd-server-tls

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
    - host: argocd-grpc-devops.demo.spic.me
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
  tls:
    - hosts:
        - argocd-grpc-devops.demo.spic.me
      secretName: argocd-grpc-tls
