sample/jenkins.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: default
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: nalbam/jenkins:slim
        ports:
        - containerPort: 8080
        - containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        emptyDir: {}
#        hostPath:
#          path: /var/jenkins_home
#        persistentVolumeClaim:
#          claimName: mysql-pv-claim

---
# ------------------- Service (jenkins) ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8080

---
# ------------------- Service (slave) ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: default
spec:
  selector:
    app: jenkins
  ports:
  - name: slave
    protocol: TCP
    port: 50000
    targetPort: 50000

---
# ------------------- Ingress ------------------- #

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: default
spec:
  rules:
  - host: jenkins.apps.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80

#---
## ------------------- PersistentVolumeClaim ------------------- #
#
#kind: PersistentVolumeClaim
#apiVersion: v1
#metadata:
#  name: mysql-pv-claim
#spec:
#  storageClassName: manual
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 8Gi
