sample/sample-back-ing.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-back
  namespace: default
  labels:
    app: sample-back
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: sample-back
  template:
    metadata:
      labels:
        k8s-app: sample-back
    spec:
      containers:
      - name: sample-spring
        image: nalbam/sample-spring:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /read
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
      - name: sample-node
        image: nalbam/sample-node:alpine
        ports:
        - containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15

---
# ------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: sample-back
  namespace: default
  labels:
    app: sample-back
spec:
  type: NodePort
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
    - name: node
      port: 3000
      targetPort: 3000
  selector:
    k8s-app: sample-back

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-back
  namespace: default
  labels:
    app: sample-back
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-back.apps.nalbam.com
    http:
      paths:
      - path: /spring/
        backend:
          serviceName: sample-back
          servicePort: 8080
      - path: /node/
        backend:
          serviceName: sample-back
          servicePort: 3000
