sample/sample-node-lb.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-node
  namespace: default
  labels:
    app: sample-node
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: sample-node
  template:
    metadata:
      labels:
        k8s-app: sample-node
    spec:
      containers:
      - name: sample-node
        image: nalbam/sample-node:alpine
        ports:
        - containerPort: 3000
          protocol: TCP

---
# ------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: sample-node
  namespace: default
  labels:
    app: sample-node
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      targetPort: 3000
  selector:
    k8s-app: sample-node

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-node
  namespace: default
  labels:
    app: sample-node
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-node.apps.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-node
          servicePort: 80
