sample/sample-spring-ing.yaml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: sample-spring
  template:
    metadata:
      labels:
        app: sample-spring
        version: 0.0.1
    spec:
      containers:
        - name: sample-spring
          image: nalbam/sample-spring:alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /read
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 15
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
#        env:
#        - name: PROFILE
#          valueFrom:
#            configMapKeyRef:
#              name: sample-spring-dev
#              key: PROFILE
#        - name: SLACK_WEBHOOK
#          valueFrom:
#            configMapKeyRef:
#              name: sample-spring-dev
#              key: SLACK_WEBHOOK
#        - name: SLACK_CHANNEL
#          valueFrom:
#            configMapKeyRef:
#              name: sample-spring-dev
#              key: SLACK_CHANNEL

---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: sample-spring

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: sample-spring.apps.nalbam.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sample-spring
              servicePort: 80
