sample/sample-spring-lb.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: sample-spring
  template:
    metadata:
      labels:
        k8s-app: sample-spring
    spec:
      containers:
      - name: sample-spring
        image: nalbam/sample-spring:alpine
        ports:
        - containerPort: 8080
          protocol: TCP

---
# ------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8080
  selector:
    k8s-app: sample-spring

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-spring
  namespace: default
  labels:
    app: sample-spring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-spring.apps.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-spring
          servicePort: 80
