sample/sample-spring.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: sample-spring
  name: sample-spring
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: sample-spring
  template:
    metadata:
      labels:
        k8s-app: sample-spring
    spec:
      containers:
      - name: sample-spring
        image: index.docker.io/nalbam/sample-spring:latest
        ports:
        - containerPort: 8080
          protocol: TCP

---
# ------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: sample-spring
  name: sample-spring
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8080
  selector:
    k8s-app: sample-spring
    toast: route

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: sample-spring
  name: sample-spring
  namespace: default
spec:
  rules:
  - host: sample-spring.apps.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-spring
          servicePort: 80
