sample/sample-tomcat-ing.yaml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: sample-tomcat
  template:
    metadata:
      labels:
        app: sample-tomcat
        version: 0.0.1
    spec:
      containers:
        - name: sample-tomcat
          image: nalbam/sample-tomcat:alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 15
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi

---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: sample-tomcat

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: sample-tomcat.apps.nalbam.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sample-tomcat
              servicePort: 80
