sample/sample-tomcat-ing.yml
# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      k8s-app: sample-tomcat
  template:
    metadata:
      labels:
        k8s-app: sample-tomcat
    spec:
      containers:
      - name: sample-tomcat
        image: nalbam/sample-tomcat:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"

---
# ------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    k8s-app: sample-tomcat

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-tomcat.apps.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-tomcat
          servicePort: 80
