sample/sample-web-ing.yml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: sample-web
  template:
    metadata:
      labels:
        app: sample-web
    spec:
      containers:
      - name: sample-web
        image: nalbam/sample-web:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi

---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sample-web

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-web.apps.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-web
          servicePort: 80
